--- a/app/views/cms/users/show.html.slim
+++ b/app/views/cms/users/show.html.slim
@@ -16,7 +16,8 @@ article.simple-rounded-box.cms
     dd= @user.role
     - if @user.role == 'student'
       dt Belongs to Classes
-      dd= @user.classrooms.collect { |c| "#{c.name} - #{c.teacher.name}" }.join('<br />').html_safe
+      - @user.classrooms.each do |c|
+        dd= "#{c.name} - #{c.teacher.name}"
     dt Classcode
     dd= @user.classcode
     dt School
@@ -29,7 +30,8 @@ article.simple-rounded-box.cms
       dt Premium Expires
       dd= @user.subscription.try(:expiration)
       dt Grades
-      dd= @user.classrooms_i_teach.collect {|c| "#{c.name} - #{c.grade}"}.join('<br />').html_safe
+      - @user.classrooms_i_teach.each do |c|
+        dd= "#{c.name} - #{c.grade}"
     dt User Location
     dd= "#{Pointpin.locate(@user.ip_address)&.city_name}, #{Pointpin.locate(@user.ip_address)&.region_name}"
     dt IP Address
